@@ -557,6 +557,7 @@ if ($controller->action == "general" || $controller->action == "soundex") {
 
 if ($controller->action == "general") {
 	print "<a href='?action=soundex'>".$pgv_lang["search_soundex"]."</a>";
+	print " | <a href='search_advanced.php'>".$pgv_lang["advanced_search"]."</a>";
 	if(PGV_USER_CAN_EDIT) {
 		print " | <a href='?action=replace'>".$pgv_lang["search_replace"]."</a>";
 	}
@@ -572,6 +573,7 @@ else if ($controller->action == "replace")
 {
 	print "<a href='?action=general'>".$pgv_lang["search_general"]."</a> | ";
 	print "<a href='?action=soundex'>".$pgv_lang["search_soundex"]."</a>";
+	print " | <a href='search_advanced.php'>".$pgv_lang["advanced_search"]."</a>";
 		if ($SHOW_MULTISITE_SEARCH >= PGV_USER_ACCESS_LEVEL) {
 			if (count($controller->Sites) > 0) {
 
@@ -582,6 +584,7 @@ else if ($controller->action == "replace")
 else
 	if ($controller->action == "soundex") {
 		print "<a href='?action=general'>".$pgv_lang["search_general"]."</a>";
+		print " | <a href='search_advanced.php'>".$pgv_lang["advanced_search"]."</a>";
 		if(PGV_USER_CAN_EDIT)
 		{
 			print " | <a href='?action=replace'>".$pgv_lang["search_replace"]."</a>";
@@ -601,7 +604,8 @@ else
 			}
 
 			print "<a href='?action=general'>".$pgv_lang["search_general"]."</a> | ";
-			print "<a href='?action=soundex'>".$pgv_lang["search_soundex"]."</a></td></tr>";
+			print "<a href='?action=soundex'>".$pgv_lang["search_soundex"]."</a>";
+			print " | <a href='search_advanced.php'>".$pgv_lang["advanced_search"]."</a></td></tr>";
 		}
 
 ?>
