@@ -154,13 +154,27 @@ print_header($pgv_lang["advanced_search"]);
 			<?php print $controller->getLabel($controller->getField($i)); ?>
 		</td>
 		<td id="vcell<?php print $i; ?>" class="list_value">
-			<input type="hidden" name="fields[<?php print $i ?>]" value="<?php print $controller->getField($i); ?>" />
+			<?php 
+			$currentFieldSearch = $controller->getField($i);		// Get this field's name and the search criterion
+			$currentField = substr($currentFieldSearch, 0, strrpos($currentFieldSearch, ':'));		// Get the actual field name
+			?>
 			<input tabindex="<?php print $i+1; ?>" type="text" id="value<?php print $i; ?>" name="values[<?php print $i; ?>]" value="<?php print $controller->getValue($i); ?>" />
-			<?php if (preg_match("/:DATE$/", $controller->getField($i))>0) {
+			<?php if (preg_match("/^NAME:/", $currentFieldSearch)>0) {
+				?>
+				<select name="fields[<?php print $i ?>]">
+					<option value="<?php print $currentField; ?>:EXACT"<?php if (preg_match("/:EXACT$/", $currentFieldSearch)>0) print " selected=\"selected\""; ?>><?php print $pgv_lang["exact"]; ?></option>
+					<option value="<?php print $currentField; ?>:BEGINS"<?php if (preg_match("/:BEGINS$/", $currentFieldSearch)>0) print " selected=\"selected\""; ?>><?php print $pgv_lang["begins_with"]; ?></option>
+					<option value="<?php print $currentField; ?>:CONTAINS"<?php if (preg_match("/:CONTAINS$/", $currentFieldSearch)>0) print " selected=\"selected\""; ?>><?php print $pgv_lang["contains"]; ?></option>
+					<option value="<?php print $currentField; ?>:SDX"<?php if (preg_match("/:SDX$/", $currentFieldSearch)>0) print " selected=\"selected\""; ?>><?php print $pgv_lang["sounds_like"]; ?></option>
+				</select>
+			<?php } else { ?>
+			<input type="hidden" name="fields[<?php print $i ?>]" value="<?php print $controller->getField($i); ?>" />
+			<?php }
+			if (preg_match("/:DATE$/", $currentFieldSearch)>0) {
 				?>
 				<select name="plusminus[<?php print $i ?>]">
 					<option value=""><?php print $pgv_lang["exact"]; ?></option>
-					<option value="2" <?php if (!empty($controller->plusminus[$i]) && $controller->plusminus[$i]==2) print "selected=\"selected\""; ?>>+/- 2 <?php print $pgv_lang['years2']; ?></option>
+					<option value="2" <?php if (!empty($controller->plusminus[$i]) && $controller->plusminus[$i]==2) print " selected=\"selected\""; ?>>+/- 2 <?php print $pgv_lang['years2']; ?></option>
 					<option value="5" <?php if (!empty($controller->plusminus[$i]) && $controller->plusminus[$i]==5) print "selected=\"selected\""; ?>>+/- 5 <?php print $pgv_lang['years']; ?></option>
 					<option value="10" <?php if (!empty($controller->plusminus[$i]) && $controller->plusminus[$i]==10) print "selected=\"selected\""; ?>>+/- 10 <?php print $pgv_lang['years']; ?></option>
 				</select>
@@ -170,32 +184,104 @@ print_header($pgv_lang["advanced_search"]);
 		//-- relative fields
 		if ($i==0 && $fct>4) {
 			$j=$fct;
+			// Get the current options for Father's and Mother's name searches
+			$fatherGivnOption = 'SDX';
+			$fatherSurnOption = 'SDX';
+			$motherGivnOption = 'SDX';
+			$motherSurnOption = 'SDX';
+			for($k=0; $k<$fct; $k++) {
+				$searchField = $controller->getField($k);
+				$searchOption = substr($searchField, 20);	// Assume we have something like "FAMC:HUSB:NAME:GIVN:foo"
+				switch (substr($searchField, 0, 20)) {
+				case 'FAMC:HUSB:NAME:GIVN:':
+					$fatherGivnOption = $searchOption;
+					break;
+				case 'FAMC:HUSB:NAME:SURN:':
+					$fatherSurnOption = $searchOption;
+					break;
+				case 'FAMC:WIFE:NAME:GIVN:':
+					$motherGivnOption = $searchOption;
+					break;
+				case 'FAMC:WIFE:NAME:SURN:':
+					$motherSurnOption = $searchOption;
+					break;
+				}
+			}
 			?>
+			<td rowspan="100" class="list_value">&nbsp;</td>
 			<td rowspan="100" class="list_value">
 				<table>
 					<!--  father -->
 					<tr>
-						<td>
-							<input type="hidden" name="fields[<?php print $j; ?>]" value="FAMC:HUSB:NAME:GIVN:SDX" />
-							<?php print $pgv_lang['father'] ?><br /><input type="text" name="values[<?php print $j; ?>]" value="<?php print $controller->getValue($controller->getIndex("FAMC:HUSB:NAME:GIVN:SDX")); ?>" />
+						<td colspan="2" class="facts_label03" style="text-align:center; ">
+							<?php print $pgv_lang['father']; ?>
 						</td>
+					</tr>
+					<tr>
+						<td class="list_label">
+							<?php print $factarray["GIVN"]; ?>
+						</td>
+						<td class="list_value">
+							<input type="text" name="values[<?php print $j; ?>]" value="<?php print $controller->getValue($controller->getIndex('FAMC:HUSB:NAME:GIVN:'.$fatherGivnOption)); ?>" />
+							<select name="fields[<?php print $j ?>]">
+								<option value="FAMC:HUSB:NAME:GIVN:EXACT"<?php if ($fatherGivnOption == 'EXACT') print " selected=\"selected\""; ?>><?php print $pgv_lang["exact"]; ?></option>
+								<option value="FAMC:HUSB:NAME:GIVN:BEGINS"<?php if ($fatherGivnOption == 'BEGINS') print " selected=\"selected\""; ?>><?php print $pgv_lang["begins_with"]; ?></option>
+								<option value="FAMC:HUSB:NAME:GIVN:CONTAINS"<?php if ($fatherGivnOption == 'CONTAINS') print " selected=\"selected\""; ?>><?php print $pgv_lang["contains"]; ?></option>
+								<option value="FAMC:HUSB:NAME:GIVN:SDX"<?php if ($fatherGivnOption == 'SDX') print " selected=\"selected\""; ?>><?php print $pgv_lang["sounds_like"]; ?></option>
+							</select>
+						</td>
+					</tr>
+					<tr>
 						<?php $j++; ?>
-						<td>
-							<input type="hidden" name="fields[<?php print $j; ?>]" value="FAMC:HUSB:NAME:SURN:SDX" />
-							<?php print $factarray['SURN'] ?><br /><input type="text" name="values[<?php print $j; ?>]" value="<?php print $controller->getValue($controller->getIndex("FAMC:HUSB:NAME:SURN:SDX")); ?>" />
+						<td class="list_label">
+							<?php print $factarray["SURN"]; ?>
+						</td>
+						<td class="list_value">
+							<input type="text" name="values[<?php print $j; ?>]" value="<?php print $controller->getValue($controller->getIndex('FAMC:HUSB:NAME:SURN:'.$fatherSurnOption)); ?>" />
+							<select name="fields[<?php print $j ?>]">
+								<option value="FAMC:HUSB:NAME:SURN:EXACT"<?php if ($fatherSurnOption == 'EXACT') print " selected=\"selected\""; ?>><?php print $pgv_lang["exact"]; ?></option>
+								<option value="FAMC:HUSB:NAME:SURN:BEGINS"<?php if ($fatherSurnOption == 'BEGINS') print " selected=\"selected\""; ?>><?php print $pgv_lang["begins_with"]; ?></option>
+								<option value="FAMC:HUSB:NAME:SURN:CONTAINS"<?php if ($fatherSurnOption == 'CONTAINS') print " selected=\"selected\""; ?>><?php print $pgv_lang["contains"]; ?></option>
+								<option value="FAMC:HUSB:NAME:SURN:SDX"<?php if ($fatherSurnOption == 'SDX') print " selected=\"selected\""; ?>><?php print $pgv_lang["sounds_like"]; ?></option>
+							</select>
+						</td>
+					</tr>
+					<!--  mother -->
+					<?php $j++; ?>
+					<tr><td colspan="2">&nbsp;</td></tr>
+					<tr>
+						<td colspan="2" class="facts_label03" style="text-align:center; ">
+							<?php print $pgv_lang['mother']; ?>
+						</td>
+					</tr>
+					<tr>
+						<td class="list_label">
+							<?php print $factarray["GIVN"]; ?>
+						</td>
+						<td class="list_value">
+							<input type="text" name="values[<?php print $j; ?>]" value="<?php print $controller->getValue($controller->getIndex('FAMC:WIFE:NAME:GIVN:'.$motherGivnOption)); ?>" />
+							<select name="fields[<?php print $j ?>]">
+								<option value="FAMC:WIFE:NAME:GIVN:EXACT"<?php if ($motherGivnOption == 'EXACT') print " selected=\"selected\""; ?>><?php print $pgv_lang["exact"]; ?></option>
+								<option value="FAMC:WIFE:NAME:GIVN:BEGINS"<?php if ($motherGivnOption == 'BEGINS') print " selected=\"selected\""; ?>><?php print $pgv_lang["begins_with"]; ?></option>
+								<option value="FAMC:WIFE:NAME:GIVN:CONTAINS"<?php if ($motherGivnOption == 'CONTAINS') print " selected=\"selected\""; ?>><?php print $pgv_lang["contains"]; ?></option>
+								<option value="FAMC:WIFE:NAME:GIVN:SDX"<?php if ($motherGivnOption == 'SDX') print " selected=\"selected\""; ?>><?php print $pgv_lang["sounds_like"]; ?></option>
+							</select>
 						</td>
 						<?php $j++; ?>
 					</tr>
-					<!--  mother -->
 					<tr>
-						<td>
-							<input type="hidden" name="fields[<?php print $j; ?>]" value="FAMC:WIFE:NAME:GIVN:SDX" />
-							<?php print $pgv_lang['mother'] ?><br /><input type="text" name="values[<?php print $j; ?>]" value="<?php print $controller->getValue($controller->getIndex("FAMC:WIFE:NAME:GIVN:SDX")); ?>" />
+						<td class="list_label">
+							<?php print $factarray["SURN"]; ?>
 						</td>
-						<?php $j++; ?>
-						<td>
-							<input type="hidden" name="fields[<?php print $j; ?>]" value="FAMC:WIFE:NAME:SURN:SDX" />
-							<?php print $factarray['SURN'] ?><br /><input type="text" name="values[<?php print $j; ?>]" value="<?php print $controller->getValue($controller->getIndex("FAMC:WIFE:NAME:SURN:SDX")); ?>" />
+						<td class="list_value">
+							<input type="text" name="values[<?php print $j; ?>]" value="<?php print $controller->getValue($controller->getIndex('FAMC:WIFE:NAME:SURN:'.$motherSurnOption)); ?>" />
+							<select name="fields[<?php print $j ?>]">
+								<option value="FAMC:WIFE:NAME:SURN:EXACT"<?php if ($motherSurnOption == 'EXACT') print " selected=\"selected\""; ?>><?php print $pgv_lang["exact"]; ?></option>
+								<option value="FAMC:WIFE:NAME:SURN:BEGINS"<?php if ($motherSurnOption == 'BEGINS') print " selected=\"selected\""; ?>><?php print $pgv_lang["begins_with"]; ?></option>
+								<option value="FAMC:WIFE:NAME:SURN:CONTAINS"<?php if ($motherSurnOption == 'CONTAINS') print " selected=\"selected\""; ?>><?php print $pgv_lang["contains"]; ?></option>
+								<option value="FAMC:WIFE:NAME:SURN:SDX"<?php if ($motherSurnOption == 'SDX') print " selected=\"selected\""; ?>><?php print $pgv_lang["sounds_like"]; ?></option>
+							</select>
+						</td>
 						</td>
 						<?php $j++; ?>
 					</tr>
@@ -209,7 +295,7 @@ print_header($pgv_lang["advanced_search"]);
 	</tr>
 	<?php } ?>
 	<tr>
-		<td class="list_value" style="vertical-align: middle; text-align: center; padding: 5px;"  colspan="3">
+		<td class="list_value" style="vertical-align: middle; text-align: center; padding: 5px;"  colspan="10">
 			<a href="#" onclick="addFields();"><?php print $pgv_lang['more_fields']; ?></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 			<input tabindex="<?php print $i+1; ?>" type="submit" value="<?php print $pgv_lang["search"]; ?>" />
 		</td>
